# llama.cpp

./: CMakePresets.json  Makefile  prepare.remoting.sh  prepare.sh  prepare.vulkan.sh  run.remoting.sh  run.sh  run.vulkan.sh
ggml/: CMakeLists.txt
ggml/include/: ggml-remoting-frontend.h
ggml/src/: CMakeLists.txt  ggml-backend-reg.cpp
ggml/src/ggml-remotingfrontend/: CMakeLists.txt  ggml-backend-buffer.cpp  ggml-backend-device.cpp  ggml-backend-reg.cpp  ggml-backend.cpp  ggml-buffer-type.cpp  ggml-host-buffer-type.cpp  ggml-remoting-frontend.cpp  ggml-remoting.h  virtgpu-shm.cpp  virtgpu-shm.h  virtgpu-utils.cpp  virtgpu-utils.h  virtgpu.cpp  virtgpu.h  virtgpu_venus.c
ggml/src/ggml-vulkan/: ggml-vulkan.cpp
src/: llama-kv-cache.cpp  llama-model-loader.cpp  llama-vocab.cpp
